include/tacuda.h

typedef enum ctStatus {
  CT_STATUS_SUCCESS = 0,
  CT_STATUS_ALLOC_FAILED = 1,
  CT_STATUS_COPY_FAILED = 2,
  CT_STATUS_KERNEL_FAILED = 3,
} ctStatus_t;
// All APIs copy host->device->host internally for ease of binding.
CTAPI_EXPORT ctStatus_t ct_sma(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_wma(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_momentum(const float *host_input, float *host_output,
                                    int size, int period);
CTAPI_EXPORT ctStatus_t ct_rocp(const float *host_input, float *host_output,
                                int size, int period);
CTAPI_EXPORT ctStatus_t ct_rocr(const float *host_input, float *host_output,
                                int size, int period);
CTAPI_EXPORT ctStatus_t ct_t3(const float *host_input, float *host_output,
                              int size, int period, float vFactor);
CTAPI_EXPORT ctStatus_t ct_trima(const float *host_input, float *host_output,
                                 int size, int period);
CTAPI_EXPORT ctStatus_t ct_minindex(const float *host_input, float *host_output,
                                    int size, int period);
CTAPI_EXPORT ctStatus_t ct_minmax(const float *host_input, float *host_min,
                                  float *host_max, int size, int period);
CTAPI_EXPORT ctStatus_t ct_minmaxindex(const float *host_input,
                                       float *host_minidx, float *host_maxidx,
                                       int size, int period);
CTAPI_EXPORT ctStatus_t ct_sum(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_rsi(const float *host_input, float *host_output,
                               int size, int period);
// MACD line only (EMA_fast - EMA_slow)
CTAPI_EXPORT ctStatus_t ct_macd_line(const float *host_input,
                                     float *host_output, int size,
                                     int fastPeriod, int slowPeriod);
CTAPI_EXPORT ctStatus_t ct_atr(const float *host_high, const float *host_low,
                               const float *host_close, float *host_output,
                               int size, int period, float initial);
CTAPI_EXPORT ctStatus_t ct_trange(const float *host_high, const float *host_low,
                                  const float *host_close, float *host_output,
                                  int size);
CTAPI_EXPORT ctStatus_t ct_stochastic(const float *host_high,
                                      const float *host_low,
                                      const float *host_close, float *host_k,
                                      float *host_d, int size, int kPeriod,
                                      int dPeriod);
CTAPI_EXPORT ctStatus_t ct_stochrsi(const float *host_input, float *host_k,
                                    float *host_d, int size, int rsiPeriod,
                                    int kPeriod, int dPeriod);
CTAPI_EXPORT ctStatus_t ct_cci(const float *host_high, const float *host_low,
                               const float *host_close, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_adx(const float *host_high, const float *host_low,
                               const float *host_close, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_obv(const float *host_price,
                               const float *host_volume, float *host_output,
                               int size);
CTAPI_EXPORT ctStatus_t ct_sar(const float *host_high, const float *host_low,
                               float *host_output, int size, float step,
                               float maxAcceleration);
CTAPI_EXPORT ctStatus_t ct_aroon(const float *host_high, const float *host_low,
                                 float *host_up, float *host_down,
                                 float *host_osc, int size, int upPeriod,
                                 int downPeriod);
CTAPI_EXPORT ctStatus_t ct_ultosc(const float *host_high, const float *host_low,
                                  const float *host_close, float *host_output,
                                  int size, int shortPeriod, int mediumPeriod,
                                  int longPeriod);